# palex

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
example/: CMakeLists.txt  Example.palex
example/inputs/accept/: accept_0.txt  accept_1.txt  accept_2.txt
example/inputs/reject/: reject_1.txt  reject_2.txt
example/src/: example_parser.cpp
examples/: Example.palex  Lexer.lrules  Parser.prules  palex.cfg
src/: CMakeLists.txt  command_line_interface.cpp  command_line_interface.h  lexergen.cpp  palex.cpp
src/bootstrap/: BootstrapLexer.cpp  BootstrapLexer.h  TokenInfo.cpp  TokenInfo.h  utf8.cpp  utf8.h
src/input/: PalexLexerAdapter.cpp  PalexLexerAdapter.h  PalexRule.palex  PalexRuleLexer.cpp  PalexRuleLexer.h  PalexRuleLexer.lrules  PalexRuleParser.cpp  PalexRuleParser.h  cmd_arguments.cpp  cmd_arguments.h  palex.cfg
src/lexer_generator/: LexerRuleLexer.cpp  LexerRuleLexer.h  LexerRuleParser.cpp  LexerRuleParser.h  lexer_automaton.cpp  lexer_automaton.h  token_definition.h  validation.cpp  validation.h
src/lexer_generator/code_gen/: code_gen_data.cpp  code_gen_data.h  cpp_code_gen.cpp  cpp_code_gen.h  lexer_generation.cpp  lexer_generation.h
src/lexer_generator/lang_recognition/: LexerRuleLexer.cpp  LexerRuleLexer.h  LexerRuleParser.h  validation.h
src/parser_generator/: ParserProductionLexer.cpp  ParserProductionLexer.h  ParserProductionParser.cpp  ParserProductionParser.h  ParserRuleLexer.cpp  ParserRuleLexer.h  ParserRuleLexer.lrules  ParserRuleParser.cpp  ParserRuleParser.h  palex.cfg  production_definition.cpp  production_definition.h  validation.cpp  validation.h
src/parser_generator/lang/: ParserProductionLexer.cpp  ParserProductionLexer.h  ParserProductionLexer.lrules  ParserProductionParser.cpp  ParserProductionParser.h  validation.cpp  validation.h
src/parser_generator/lang_recognition/: ParserProductionParser.h
src/parser_generator/shift_reduce_parsers/: parser_state.cpp  parser_state.h  parser_state_comparators.cpp  parser_state_comparators.h  parser_table_generation.cpp  parser_table_generation.h  parser_tables.cpp  parser_tables.h  state_lookahead.cpp  state_lookahead.h
src/parser_generator/shift_reduce_parsers/code_gen/: cpp_code_gen.cpp  cpp_code_gen.h  parser_generation.cpp  parser_generation.h
src/regex/: RegexParser.cpp  RegexParser.h  RegexParser.ipp  character_classes.h  regex_ast.cpp  regex_ast.h
src/templates/: all_template_headers.cmake  template_completion.cpp  template_completion.h  template_generator.cmake
src/util/: Automaton.h  Automaton.ipp  Visitor.h  config_getters.cpp  config_getters.h  config_loader.cpp  config_loader.h  encoding.cpp  encoding.h  palex_except.cpp  palex_except.h  stream_format.cpp  stream_format.h  unicode.cpp  unicode.h  utf8.cpp  utf8.h
src/util/regex/: RegexParser.cpp  RegexParser.h  RegexParser.ipp  character_classes.h  regex_ast.cpp  regex_ast.h
templates/: cpp_ast_builder_header.template  cpp_lexer_header.template  cpp_lexer_source.template  cpp_parser_header.template  cpp_parser_source.template  cpp_token_header.template  cpp_token_source.template  cpp_types_header.template  cpp_types_source.template  cpp_utf8_header.template  cpp_utf8_source.template  example_cpp.tpl  example_h.template
tests/: CMakeLists.txt  TestReport.cpp  TestReport.h  TestUtils.h  lexer_generator_test.cpp  regex_test.cpp  templates_test.cpp  test_utils.h  util_test.cpp
tests/generated_lexer/: FallbackTest.palex  IgnoredTokensTest.palex  IntIdentTest.palex  create_lexer_test.cmake  fallback_test.cpp  fallback_test.out  ignored_tokens_test.cpp  ignored_tokens_test.out  int_ident_test.cpp  int_ident_test.out  no_fallback_test.cpp  no_fallback_test.out
tests/input/: cmd_arguments_errors_test.cpp  cmd_arguments_test.cpp  palex_rule_lexer_test.cpp  palex_rule_parser_errors_test.cpp  palex_rule_parser_test.cpp
tests/lexer_generator/: rule_lexer_test.cpp  rule_parser_errors_test.cpp  rule_parser_test.cpp  rule_validation_test.cpp
tests/parser_generator/: action_conflict_test.cpp  first_set_error_test.cpp  first_set_test.cpp  follow_terminals_test.cpp  grammar_conflict_test.cpp  parser_table_error_test.cpp  parser_table_test.cpp  production_parser_test.cpp  production_validation_test.cpp
tests/regex/: branch_test.cpp  char_range_set_test.cpp  char_range_test.cpp  char_set_test.cpp  quantifier_test.cpp  regex_errors_test.cpp  regex_priority_test.cpp  sequence_test.cpp
tests/templates/: escape_characters_test.cpp  template_completion_test.cpp  template_errors_test.cpp
tests/util/: automaton_connections_test.cpp  automaton_dfa_conversion_test.cpp  automaton_states_test.cpp  config_getters_test.cpp  utf8_input_test.cpp  utf8_output_test.cpp  util_test.cpp
